# atlas-compliance-copilot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .trivyignore  .trivyignore.yaml  CLAUDE.md  README.md  pom.xml
.github/workflows/: calibration.yml  ci.yml  deploy.yml
agents/: Dockerfile  README.md  pyproject.toml
agents/app/: __init__.py  amounts.py  api.py  checkpointer.py  config.py  gateway_client.py  graph.py  jwt_utils.py  logging_config.py  mcp_client.py  metrics.py  models.py  runner.py  state.py  tracing.py
agents/app/eval/: __init__.py  agent_gate.py  agent_scorer.py  scenarios.py
agents/app/nodes/: __init__.py  act.py  assess.py  planner.py  retrieve.py
agents/data/: agent-baseline.json
agents/tests/: test_act.py  test_agent_eval.py  test_agent_path_invariants.py  test_amounts.py  test_api.py  test_checkpointer.py  test_clarify.py  test_config.py  test_e2e_forcing_story.py  test_graph.py  test_hitl.py  test_logging.py  test_mcp_client.py  test_nodes.py  test_observability.py  test_resume_restart.py
docs/: DECISIONS.md  DEMO.md  PORTFOLIO.md  ROADMAP.md  RUNBOOK.md
docs/phases/: P1_SPEC.md  P2_SPEC.md  P3_SPEC.md  P4_SPEC.md  P5_SPEC.md  P6_SPEC.md  P7_SPEC.md
evals/: README.md  pyproject.toml
evals/atlas_evals/: __init__.py  ab.py  baseline.py  cassettes.py  client.py  cost_gate.py  cost_report.py  drift.py  fingerprint.py  gate.py  gateway_client.py  langfuse_sync.py  promotion_floors.py  promotion_gate.py  record.py  report.py
evals/atlas_evals/datasets/: __init__.py  adversarial.py  corpus.py  golden.py  refusal.py
evals/atlas_evals/metrics/: __init__.py  adversarial_scorer.py  citation.py  format_validity.py  ragas_runner.py  ragas_scorer.py  refusal.py  samples.py
evals/data/: adversarial.jsonl  baseline.json  gateway-baseline.json  golden.jsonl  promotion-floors.json  refusal.jsonl
evals/data/promotion/: README.md
evals/data/promotion/blocked/: comparison.json
evals/promptfoo/: promptfooconfig.yaml
evals/scripts/: capture_drift_alert.py  refresh_eval_summary.py
evals/tests/: test_adversarial.py  test_adversarial_scorer.py  test_cassettes.py  test_client.py  test_client_cassette.py  test_cost_gate.py  test_cost_report.py  test_drift.py  test_fingerprint.py  test_format_validity.py  test_gate.py  test_gate_through_gateway.py  test_gateway_client.py  test_golden.py  test_metrics.py  test_promotion_fixtures.py  test_promotion_floors.py  test_promotion_gate.py  test_ragas_scorer_replay.py  test_refusal.py  test_refusal_dataset.py  test_report_langfuse.py  test_smoke.py
gateway/: Dockerfile  README.md  pom.xml
gateway/src/main/resources/: application.yml
gateway/src/main/resources/dev/: clearance-users.json
infra/: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
infra/bench/: README.md  pyproject.toml
infra/bench/atlas_bench/: __init__.py  __main__.py  client.py  metrics.py  report.py  runner.py
infra/bench/results/: COMPARISON.md  ollama-L4.json  vllm-L4.json
infra/bench/tests/: test_metrics.py  test_report.py  test_runner.py
infra/db/init/: 01-extensions.sql  02-langfuse-db.sql  03-mlflow-db.sql
infra/deploy/: README.md  seed-demo.sh  smoke.sh  up.sh
infra/docker/: HealthCheck.java
infra/gpu/: README.md  pyproject.toml
infra/gpu/atlas_gpu/: __init__.py  __main__.py  bootstrap.py  lifecycle.py  providers.py  provision.py  sdk.py
infra/gpu/tests/: fakes.py  test_bootstrap.py  test_lifecycle.py  test_providers.py  test_provision.py  test_vllm_lora_live.py
infra/grafana/dashboards/: atlas-agents.json  atlas-cost.json  atlas-evals.json  provider.yml
infra/grafana/datasources/: prometheus.yml
infra/mlflow/: Dockerfile  entrypoint.sh
infra/prometheus/: alertmanager.yml  alerts.rules.test.yml  alerts.rules.yml  prometheus.yml
infra/proxy/: Caddyfile  README.md
mcp-tools/: Dockerfile  README.md  pom.xml
mcp-tools/src/main/resources/: application.yml
rag-engine/: Dockerfile  README.md  pom.xml
rag-engine/src/main/resources/: application.yml
rag-engine/src/main/resources/corpus/: README.md
training/: README.md  pyproject.toml
training/atlas_training/: __init__.py  config.py  cost.py  infer.py  report.py  stats.py  tracking.py  train.py
training/atlas_training/data/: __init__.py  builder.py  corpus.py  manifest.py  synth.py
training/configs/: qlora_qwen3b_smoke.yaml  qlora_qwen7b.yaml
training/data/: manifest.json  synthetic.jsonl  train.jsonl  val.jsonl
training/results/: COMPARISON.md  README.md  base.json  comparison.json  cost.json  ft.json
training/scripts/: launch_gpu_run.py  p7_episodic_run.py  promote.py  register_adapter.py  rollback.py  run_episodic.py
training/tests/: test_builder.py  test_config.py  test_corpus.py  test_cost.py  test_infer.py  test_manifest.py  test_promote.py  test_report.py  test_stats.py  test_synth.py  test_tracking.py  test_tracking_it.py  test_train.py
ui/: .gitignore  .nvmrc  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/e2e/: fixtures.ts  forcing-story.spec.ts  negative-access.spec.ts  security-a11y.spec.ts
ui/e2e-demo/: forcing-story.demo.spec.ts
ui/public/: cost-summary.json  eval-summary.json
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/app/: routes.tsx
ui/src/app/admin/: AdminPage.tsx  AuditLog.tsx  CostDashboard.tsx  EvalScores.tsx  useAuditLog.ts  useStaticJson.ts
ui/src/app/auth/: AuthContext.tsx  LoginPage.tsx  clearance.ts  useClearance.ts
ui/src/app/chat/: AgentRunView.tsx  Answer.tsx  ApprovalCard.tsx  ChatPage.tsx  Citation.tsx  MetaBadges.tsx  TracePanel.tsx  agentCitations.ts  useAgentRun.ts  useProgressiveReveal.ts  useQuery.ts
ui/src/lib/: apiClient.ts  sanitize.ts  types.ts
ui/tests/: admin.test.tsx  agent-run.test.tsx  answer.test.tsx  auth.test.tsx  chat-page.test.tsx  citation.test.tsx  clearance.test.ts  login-page.test.tsx  reveal.test.tsx  sanitize.test.ts  setup.ts  smoke.test.tsx
(+245 files in other folders)
