[project]
name = "atlas-agents"
version = "0.1.0"
description = "Atlas Agent Orchestrator (Python / LangGraph). P4: planner-executor agent behind a run API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
]

[dependency-groups]
dev = ["pytest>=8", "testcontainers[postgres]>=4.8"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: calling Depends()/Header() in argument defaults is the idiomatic FastAPI pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
