[project]
name = "atlas-evals"
version = "0.1.0"
description = "Atlas evaluation & observability harness (RAGAS/DeepEval). P0: scaffold only."
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=8"]
# Heavy LLM-eval stack — only needed for the live RECORD/calibration path (Task 8), never for the
# offline REPLAY gate or the dataset/cassette unit tests. Install with: uv run --group ragas ...
ragas = ["ragas>=0.2", "langchain-ollama>=0.2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
