[project]
name = "atlas-gpu"
version = "0.1.0"
description = "Atlas GPU lifecycle + from-scratch provisioner (create / install Ollama+vLLM / discover OpenAI-compatible endpoints / GUARANTEED pause). P2-P3, ADR-0029 / ADR-0066."
requires-python = ">=3.11"
# `jarvislabs` (official SDK/CLI) drives create/resume/pause/destroy. It is imported
# LAZILY (only inside RealJlClient), so importing atlas_gpu — and the guaranteed-pause
# watchdog path — never requires the package. Offline tests inject a FakeJlClient, so CI
# needs no SDK and no network. See ADR-0066 for the stdlib-only tradeoff.
dependencies = ["jarvislabs>=0.2"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
